# analysis-for-action

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.R
.github/: pull_request_template.md  run_linters.R
.github/workflows/: pull_request_workflow.yml  r_lint.yml
data/: Daily_Cholera_Data.xlsx  vulnerable.csv
data collection/survey/school sampling/: school sample size.py  school sampling sample size.ipynb
data collection/survey/syndromic surveillance/: ARIMA_Herdi_final.R  syndromic surveillance.Rmd
data collection/survey/syndromic surveillance/data/: Diarrhoea_u5_2023_2025_data.csv
data_analysis/pandemic_specific_analysis/disease_prevalence_and_incidence_rate/: Prevalence and incidence Codes.Rmd
data_analysis/pandemic_specific_analysis/disease_prevalence_and_incidence_rate/data/: cholera_data_2022.csv  mw_population.csv
docs/: _config.yml
learning_resources/_example_theme/_example_module/_example_unit/docs/: example.md
learning_resources/_example_theme/_example_module/_example_unit/python/: 01_example.ipynb  02_example.ipynb  example.ipynb  example.py
learning_resources/_example_theme/_example_module/_example_unit/r/: 01_example.Rmd  02_example.Rmd  example.Rmd
learning_resources/data/: vulnerable.csv
learning_resources/data_analysis/reproducible_analytical_pipelines/rap_in_action/birth_characteristics/: README.md
learning_resources/outputs_and_reporting/data_visualisation/basic_data_visualisation/docs/: example.md
learning_resources/outputs_and_reporting/data_visualisation/basic_data_visualisation/python/: 01_example.ipynb
learning_resources/outputs_and_reporting/data_visualisation/basic_data_visualisation/r/: making_bar_charts_in_R.Rmd  making_line_charts_in_R.Rmd  making_pie_charts_in_R.Rmd  making_tables_in_r.Rmd
themes/3_outputs_and_reporting/1_basic_data_visualisation/html/: contrast_checker.html
themes/3_outputs_and_reporting/1_basic_data_visualisation/python/contrast_checker/: contrast_slider.bat
themes/3_outputs_and_reporting/1_basic_data_visualisation/r/shiny/: contrast_checker_app.R
themes/data_analysis/RAP/Intro_to_RAP/: error_message.Rmd  error_message_python.ipynb
themes/data_analysis/RAP/QA_for_RAP/book/: _toc.yml  checklist_lower.md  checklist_moderate.md  code_documentation.md  configuration.md  continuous_integration.md  data.md  glossary.md  intro.md  learning.md  managers_guide.md  modular_code.md  peer_review.md  principles.md  project_documentation.md  project_structure.md  readable_code.md  testing_code.md  version_control.md
themes/data_analysis/epidemiological_analysis/mortality/: README.md
themes/data_analysis/epidemiological_analysis/mortality/Data/: european_standard_population.csv  mid_year_population_estimates.csv  synthetic_birth_notifications_dictionary.csv  synthetic_life_table.csv  (+2 more)
tools/_example_theme/_example_tool/R/: DESCRIPTION  README.md  tool.R
tools/_example_theme/_example_tool/python/: README.md  requirements.txt  tool.py
tools/data_collection/data_collection_mode/API_pop/: Data_Dictionary_API-Pop.md  Data_Dictionary_API-Pop_cases.md  Data_Dictionary_API-Pop_weekly_pop.md  LICENSE  README.md  README_API-Pop.md  README_API-Pop_Dinamica_Trabajo_Colaborativo.md  README_API-Pop_ES.md  README_API-Pop_GitHub.md  app.R  config.json  global.R
tools/data_collection/sampling/sample_size_calculator/: sample_size_calculator_source_code.R
(+148 files in other folders)
